# common/src/main/kotlin/info/javaway/enotty/backend/common/models/EnottyStubCase.kt
@@ -1,0 +1,5 @@
+package info.javaway.enotty.backend.common.models
+
+enum class EnottyStubCase {
+    NONE, SUCCESS, DATABASE_ERROR
+}
