# specs/enotty.api-spec.yaml
@@ -282,6 +282,11 @@ components:
             - prod
             - test
             - stub
+        stubCase:
+          type: string
+          enum:
+            - success
+            - database_error
 
     BasePaginatedRequest:
       type: object
@@ -460,6 +465,8 @@ components:
           properties:
             page:
               $ref: '#/components/schemas/BasePaginatedRequest'
+            debug:
+              $ref: '#/components/schemas/BaseDebugRequest'
 
     SearchNoteResponse:
       description: Структура для ответа на запрос поиска заметки
